samples/_failures_safe/1761549485_a86ab6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6a41334.c: In function ‘main’:
./samples/SAFE/__tmp_d6a41334.c:176:58: error: expected ‘)’ at end of input
  176 |                     printf("%d! = %.0f\n", number, result
      |                           ~                              ^
      |                                                          )
./samples/SAFE/__tmp_d6a41334.c:176:21: error: expected declaration or statement at end of input
  176 |                     printf("%d! = %.0f\n", number, result
      |                     ^~~~~~
./samples/SAFE/__tmp_d6a41334.c:176:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d6a41334.c:176:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d6a41334.c:176:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d6a41334.c:176:21: error: expected declaration or statement at end of input
